--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start-dev": "NODE_ENV=development webpack --watch --config ./webpack.dev.js",
     "build-prod": "NODE_ENV=buildprod webpack --config ./webpack.prod.js",
     "start-prod": "NODE_ENV=production webpack --watch --config ./webpack.prod.js",
+    "start-server": "json-server --watch ./uitests/server/db.json --routes ./uitests/server/routes.json --port 30026",
     "test": "jest --coverage"
   },
   "keywords": [],
@@ -51,6 +52,7 @@
     "fetch-mock": "^5.13.1",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
+    "json-server": "^0.12.1",
     "jest": "^21.2.1",
     "progress-bar-webpack-plugin": "^1.10.0",
     "raf": "^3.4.0",
@@ -64,6 +66,7 @@
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1",
     "webpack-merge": "^4.1.1",
+    "webpack-shell-plugin": "^0.5.0",
     "win-node-env": "^0.1.0"
   }
 }
